Actualizacion de archivos html y css

--- a/tienda.html
+++ b/tienda.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecommerce - Index</title>
+    <title>Ecommerce - Tienda</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,24 +35,90 @@ family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         </nav>
     </div>
 
-    <!--imagen de la navegacion principal-->
-
-    <!--<section class="sobre-nosotros">
-        <div class="contenedor sobre-nosotros-grid">
-            <div class="nosotros-texto">
-                <h2>Sobre Nosotros</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas nam dolore omnis, laboriosam magni 
-                consequatur expedita aut, quas, ipsam dolor hic earum minima deleniti obcaecati explicabo. 
-                Deleniti quia eos omnis!</p>
-            </div>
-
-        </div>
-    </section>-->
-
-
     <main class="contenido-principal contenedor">
-        <h2 class="text-center">Nombre pagina</h2>
+        <h2 class="text-center">Nuestros Productos</h2>
+          <div class="listado-productos">
+                <div class="producto">
+                    <img src="/img/producto1.jpg" alt="Imagen Poducto">
 
+                    <div class="texto-producto">
+                        <h3>Producto 1</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas consectetur accusamus quos 
+                        sequi asperiores doloribus </p>
+                        <p class="precio"> $1,200,000</p>
+
+                        <a class="boton" href="#">Agregar al Carrito</a>
+                    </div> <!--Info del producto 1-->
+                </div> <!--Producto-->
+
+                <div class="producto">
+                    <img src="/img/producto2.jpg" alt="Imagen Poducto">
+
+                    <div class="texto-producto">
+                        <h3>Producto 2</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas consectetur accusamus quos 
+                        sequi asperiores doloribus </p>
+                        <p class="precio"> $1,200,000</p>
+
+                        <a class="boton" href="#">Agregar al Carrito</a>
+                    </div> <!--Info del producto 2-->
+                </div> <!--Producto-->
+
+                <div class="producto">
+                    <img src="/img/producto3.jpg" alt="Imagen Poducto">
+
+                    <div class="texto-producto">
+                        <h3>Producto 3</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas consectetur accusamus quos 
+                        sequi asperiores doloribus </p>
+                        <p class="precio"> $1,200,000</p>
+
+                        <a class="boton" href="#">Agregar al Carrito</a>
+                    </div> <!--Info del producto 3-->
+                </div> <!--Producto-->
+
+
+                <div class="producto">
+                    <img src="/img/producto4.jpg" alt="Imagen Poducto">
+
+                    <div class="texto-producto">
+                        <h3>Producto 4</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas consectetur accusamus quos 
+                        sequi asperiores doloribus </p>
+                        <p class="precio"> $1,200,000</p>
+
+                        <a class="boton" href="#">Agregar al Carrito</a>
+                    </div> <!--Info del producto 4-->
+                </div> <!--Producto-->
+
+                <div class="producto">
+                    <img src="/img/producto5.jpg" alt="Imagen Poducto">
+
+                    <div class="texto-producto">
+                        <h3>Producto 5</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas consectetur accusamus quos 
+                        sequi asperiores doloribus </p>
+                        <p class="precio"> $1,200,000</p>
+
+                        <a class="boton" href="#">Agregar al Carrito</a>
+                    </div> <!--Info del producto 5-->
+                </div> <!--Producto-->
+
+
+                <div class="producto">
+                    <img src="/img/producto6.jpg" alt="Imagen Poducto">
+
+                    <div class="texto-producto">
+                        <h3>Producto 6</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas consectetur accusamus quos 
+                        sequi asperiores doloribus </p>
+                        <p class="precio"> $1,200,000</p>
+
+                        <a class="boton" href="#">Agregar al Carrito</a>
+                    </div> <!--Info del producto 6-->
+                </div> <!--Producto-->
+
+            </div> <!--Fin de listado de productos-->
          
 
     </main>
