--- a/galeria.html
+++ b/galeria.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecommerce - Index</title>
+    <title>Ecommerce - Galeria</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,7 +37,7 @@ family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
 
     <main class="contenido-principal contenedor">
-        <h2 class="text-center">Nombre pagina</h2>
+        <h2 class="text-center">Galeria</h2>
 
          
 
