--- a/blog.html
+++ b/blog.html
@@ -40,7 +40,7 @@ family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <h2 class="text-center">Nuestro Blog</h2>
         <section class="contenedor-blog">
             <div class="blog">
-                <article>
+                <article class="entrada">
                     <h2>Guía de Colores</h2>
 
                     <div class="imagen-blog">
@@ -62,11 +62,12 @@ family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
                         exercitationem odio ea?</p>
 
                     </div>
+                    <a href="entrada.html" class="boton max-width-30">Leer</a>
 
 
                 </article>
 
-                <article>
+                <article class="entrada">
                     <h2>Guía de Colores</h2>
 
                     <div class="imagen-blog">
@@ -88,13 +89,15 @@ family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
                         exercitationem odio ea?</p>
 
                     </div>
+                    
+                    <a href="entrada.html" class="boton max-width-30">Leer</a>
 
 
                 </article>
             
             </div>
 
-            <aside>
+            <aside class="entrada-blog-b">
                 <h3>Otras Entradas de Blog</h3>
 
                 <ul>
