--- a/contacto.html
+++ b/contacto.html
@@ -39,19 +39,19 @@ family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <main class="contenido-principal contenedor">
         <h2 class="text-center">Contacto</h2>
 
-        <form>
+        <form class="formulario">
 
             <fieldset>
                 <legend>Tus datos</legend>
                 <div class="campo">
 
                     <label for="nombre">Nombre:</label>
-                    <input  id="nombre" type="text" placeholder="Ingresa nombre completo">
+                    <input  id="nombre" type="text" placeholder="Ingresa nombre completo" required>
                 </div>
 
                 <div class="campo">
                     <label for="asunto">Asunto:</label>
-                    <input id="asunto" type="text" placeholder="asunto">
+                    <input  id="asunto" type="text" placeholder="asunto">
                 </div>
 
                 <div class="campo">
@@ -66,7 +66,7 @@ family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
                 <div class="campo">
                     <label for="fecha">Fecha:</label>
-                    <input id="fecha" type="date">
+                    <input  id="fecha" type="date">
                 </div>
 
                 <div class="campo">
@@ -110,7 +110,19 @@ family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
                 </div>
 
+                <div class="campo">
+                    <label for="categoria">Categoría de interés</label>
+                    <input list="categorias" name="categorias">
+                    <datalist id="categorias">
+                        <option value="Cocina">
+                        <option value="Exteriores">
+                        <option value="Cuartos">
+                        <option value="Televisión">
+                        <option value="Oficina">
+                 </div>
+
             </fieldset>
+            <input class="boton" type="submit" value="Enviar Formulario">
 
         </form>
          
