--- a/galeria.html
+++ b/galeria.html
@@ -20,7 +20,7 @@ family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 <body>
     
     <header>
-        <h1 class="nombre-sitio">Tienda <span> Muebles</span></h1>
+        <h1 class="nombre-sitio"><a href="index.html">Tienda <span> Muebles</span></a></h1>
     </header>
 
     <!--navegacion principal → display in-line-->
